--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,5 +1,14 @@
+@forward 'element-plus/theme-chalk/src/common/var.scss' with (
+  $colors: (
+    'primary': (
+      'base': $primary-color,
+    ),
+  ),
+);
+
 @import "./reset";
 @import "./pages/login.scss";
+
 
 body {
     background-color: #efefef;
