update to latest pkg

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -3,12 +3,10 @@
     'primary': (
       'base': $primary-color,
     ),
-  ),
+  )
 );
 
 @import "./reset";
-@import "./pages/login.scss";
-
 
 body {
     background-color: #efefef;
