修改主题，增加用户主页

--- a/src/style/_extend.scss
+++ b/src/style/_extend.scss
@@ -3,7 +3,7 @@ $imgurl: "../images/";
 
 $pink : #FBBBD1;
 $gold : #FFBE3C;
-$primary-color : #6495ED;
+$primary-color : rgb(108,99,255);
 $color-text:#333;
 $color-text-grey:rgba(255,255,255,0.6);
 $app-primary-color:#48D8B5;
