--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -34,6 +34,9 @@ body {
     cursor: not-allowed;
     pointer-events: none;
 }
+.is-remove{
+    display: none;
+}
 
 .el-menu-item[disabled="true"] {
     display: none;
